--- a/todo.css
+++ b/todo.css
@@ -1,5 +1,9 @@
-body{
+html{
     height: 100%;
+    width: 100%;
+}
+
+body{
     background-color:#BBDCEC
 }
 
@@ -29,9 +33,7 @@ button{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    margin-right: 2px
-    
+    justify-content: space-around;
 }
 
 button:hover{
@@ -48,4 +50,31 @@ label{
 #dropdown{
     width: 50px;
     height: 25px;
+}
+
+@media (max-width: 1024px){
+    .button_container > button {
+        width: min-content; 
+    }
+}
+
+@media (max-width: 768px){
+    .button_container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap:wrap;
+        justify-content: space-around;
+    }
+
+    button {
+        margin: 5px;
+    }
+}
+
+@media (max-width: 425px){
+    .button_container {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-items: center;
+    }
 }
